# srt-slurm

./: .gitignore  CLAUDE.md  LOG_STRUCTURE.md  Makefile  QUICKSTART.md  README.md  app.py  deepep_config.json  parse.py  push_after_benchmark.sh  pyproject.toml  requirements.txt  run_dashboard.sh  srtslurm.yaml.example
.github/workflows/: ci.yaml
analysis/dashboard/: app.py  components.py
configs/: README.md  checkout-branch.sh  fix-timeouts-arm.sh  fix-timeouts-x86.sh  install-nixl.sh  install-sglang-main.sh
configs/expert-distributions/: expert_distribution_fp4_1k1k_compressed.pt  expert_distribution_fp4_1k8k_compressed.pt  expert_distribution_fp4_8k1k_compressed.pt  expert_distribution_fp8_1k1k_compressed.pt  expert_distribution_fp8_1k8k_compressed.pt  expert_distribution_fp8_8k1k_compressed.pt
dashboard/: __init__.py  app.py  comparison_tab.py  components.py  config_tab.py  latency_tab.py  node_metrics_tab.py  pareto_tab.py  rate_match_tab.py
docs/: SUMMARY.md  accuracy.md  analyzing.md  architecture.md  config-reference.md  installation.md  profiling.md  status-api-spec.md
examples/: enable-profiling.yaml
logs/: .gitkeep
recipes/gb200-fp4/1k1k/: low-latency.yaml  max-tpt.yaml  mid-curve.yaml
recipes/gb200-fp4/1k8k/: low-latency.yaml  max-tpt.yaml  mid-curve.yaml
recipes/gb200-fp4/8k1k/: low-latency.yaml  max-tpt.yaml  mid-curve.yaml
recipes/gb200-fp8/1k1k/: low-latency-mtp.yaml  low-latency.yaml  max-tpt-2p1d-mtp.yaml  max-tpt.yaml  mid-curve-3p1d-mtp.yaml  mid-curve.yaml
recipes/gb200-fp8/1k8k/: low-latency-mtp.yaml  low_latency.yaml  max-tpt-mtp.yaml  max_tpt.yaml  mid-curve-mtp.yaml  mid_curve.yaml
recipes/gb200-fp8/8k1k/: low-latency-mtp.yaml  low-latency.yaml  max_tpt.yaml  mid-curve-5p1d-mtp.yaml  mid-curve.yaml
recipes/gb300-fp4/1k1k/: low_latency.yaml  max_tpt.yaml  mid_curve.yaml
recipes/gb300-fp4/1k8k/: low-latency.yaml  max-tpt.yaml  mid-curve.yaml
recipes/gb300-fp4/8k1k/: low_latency.yaml  max_tpt.yaml  mid_curve.yaml
recipes/h200/1k1k/: bs128-agg-tp-mtp.yaml  bs128-agg-tp.yaml  bs256-1p6d-dep-mtp.yaml  bs256-1p6d-dep.yaml  bs256-1p6d-tp-mtp.yaml  bs256-1p6d-tp.yaml  low-latency-1p9d-mtp.yaml  low-latency-1p9d.yaml
recipes/h200/8k1k/: bs128-1p1d-dep-mtp.yaml  bs128-1p1d-dep.yaml  bs128-agg-tp-mtp.yaml  bs128-agg-tp.yaml  bs16-1p3d-mtp.yaml  bs16-1p3d.yaml  bs4-1p7d-mtp.yaml  bs4-1p7d.yaml  bs64-2p3d-mtp.yaml  bs64-2p3d.yaml  bs8-1p6d-mtp.yaml  bs8-1p6d.yaml
recipes/qwen3-32b/basic-b300/: disagg-kv-dynamo.yaml  disagg-kv-sglang.yaml
recipes/vllm/deepseek-r1/: disagg-h100-16gpu.yaml
recipes/vllm/test/: opt-125m-single-gpu.yaml  qwen3-0.6b-single-gpu.yaml
recipies/gb200-fp4/: 1p2d-mtp.yaml  max-tpt-2-mtp.yaml
recipies/gb300-fp4/: 1p2.yaml
recipies/gb300-fp4/128k8k/: 1-top-of-curve.yaml  2-mid-curve-pt1.yaml  3-mid-curve-pt2.yaml  4-mid-curve-pt3.yaml  5-low-latency.yaml
recipies/h200/1k1k/: bs128-agg-tp.yaml  bs256-1p6d-dep.yaml  bs256-1p6d-tp.yaml  low-latency-1p9d.yaml
recipies/h200/8k1k/: bs128-agg-tp.yaml  bs4-1p7d.yaml  bs64-2p3d.yaml
recipies/qwen3-32b/basic-gb200/: disagg-kv-dynamo.yaml
scripts/templates/: job_script_minimal.j2  job_script_template_agg.j2  job_script_template_disagg.j2  nginx.conf.j2
slurm_jobs/: README.md  job_script_template_agg.j2  job_script_template_disagg.j2  submit_disagg.sh  submit_job_script.py
slurm_jobs/scripts/: benchmark_utils.sh  check_server_health.py  nginx.conf.j2  sglang_bench_serving.sh  worker_setup.py
slurm_runner/: README.md  cluster_config.py  job_script_template_agg.j2  job_script_template_disagg.j2  job_script_template_prefill_profile.j2  parse.py  submit_disagg.sh  submit_job_script.py
slurm_runner/scripts/: worker_setup.py
src/srtctl/: __init__.py  logging_utils.py
srtslurm/: cache_manager.py  cloud_sync.py  cluster_config.py  config_reader.py  log_parser.py  models.py  run_comparison.py  run_loader.py  sync_results.py  visualizations.py
tests/: README.md  mock_status_server.py  test_benchmarks.py  test_configs.py  test_e2e.py  test_frontend_topology.py  test_integration_status.py  test_postprocess.py  test_profiling.py  test_status.py
utils/: __init__.py  config_reader.py  log_parser.py  metrics.py  parser.py  run_comparison.py
(+404 files in other folders)
